# nandu

./: .dockerignore  .readthedocs.yaml  CHANGES.md  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  mkdocs.yml  pygeoapi-openapi.yml  pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile  docker-compose.yml
docs/: dev_guide.md
src/nandu/: __init__.py  __version__.py
tests/: conftest.py  pygeoapi-test-config.yml  pygeoapi-test-openapi.yml  test_process_hello.py  util.py
