[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nandu"
version = "0.1.0"
description = "OGC API - Processes example with pygeoapi"
authors = ["Carsten Ehbrecht <ehbrecht@dkrz.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pygeoapi = ">=0.18.0"
flask = ">=2.2.5"
rasterio = ">=1.4.3"
numpy = "<2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
ruff = ">=0.8.1"
mkdocs-material = ">=9.5.47"
bump-my-version = ">=0.10.0"

[tool.ruff]
line-length = 150

[tool.bumpversion]
current_version = "0.1.0"
file_patterns = pyproject.toml
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "src/nandu/__version__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "Dockerfile"
search = "Version=\"{current_version}\""
replace = "Version=\"{new_version}\""

