[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nandu"
authors = [{name = "Carsten Ehbrecht", email = "ehbrecht@dkrz.de"}]
maintainers = [
  {name="Carsten Ehbrecht", email="ehbrecht@dkrz.de"},
  {name="Trevor James Smith", email="smith.trevorj@ouranos.ca"},
]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["ogcapi-processes", "pygeoapi", "birdhouse", "nandu"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Atmospheric Science"
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
  "pygeoapi >=0.18.0",
  "flask >=2.2.5",
  "rasterio >=1.4.3",
  "numpy <2",
]

[project.urls]
Home = "https://github.com/bird-house/nandu"

[project.optional-dependencies]
dev = [
    "pytest >=8.3.4",
    "ruff",
    "bump-my-version",
]

docs = [
    "mkdocs-material",
]

[tool.ruff]
line-length = 150

[tool.bumpversion]
current_version = "0.1.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
allow_dirty = true

[[tool.bumpversion.files]]
filename = "src/nandu/__version__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "Dockerfile"
search = "Version=\"{current_version}\""
replace = "Version=\"{new_version}\""

